# deepseek-cli

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_zh.md
src/: api.rs  cli.rs  constants.rs  data.rs  display.rs  error.rs  lib.rs  main.rs  types.rs
src/auth/: mod.rs  storage.rs  wechat.rs
